fix(select): non label-fixed select breaks input styling
https://github.com/Trendyol/baklava/issues/752

--- a/src/components/select/bl-select.css
+++ b/src/components/select/bl-select.css
@@ -89,7 +89,7 @@
 }
 
 :host(:not([placeholder])) .placeholder,
-.select-wrapper.selected .placeholder,
+.select-wrapper.select-open .placeholder,
 :host([label]:not([label-fixed])) .select-wrapper:not(.select-open) .placeholder {
   display: none;
 }
